[Feature] fixed navigation animation, drops down bounces, overflow hidden.

--- a/css/index.css
+++ b/css/index.css
@@ -171,85 +171,89 @@ h5 {
   line-height: 24px;
   font-weight: bold;
 }
-.headerWrapper {
+.main-nav-header {
   background: #98A4AF;
   position: sticky;
   top: 0;
-  z-index: 4;
-}
-.headerWrapper .main-nav-header {
   display: flex;
-  padding: 12px 5%;
+  height: 47px;
   justify-content: space-between;
   align-items: center;
   z-index: 4;
 }
 @media (max-width: 500px) {
-  .headerWrapper .main-nav-header {
+  .main-nav-header {
     width: 100%;
   }
 }
-.headerWrapper .main-nav-header a {
+.main-nav-header a {
   text-decoration: none;
 }
-.headerWrapper .main-nav-header h1 {
+.main-nav-header h1 {
   background: #98A4AF;
   font-size: 2.8rem;
   font-weight: bold;
   color: #fff;
   cursor: pointer;
   z-index: 5;
+  position: fixed;
+  top: 10px;
+  left: 67px;
 }
-.headerWrapper .main-nav-header .nav-hamburger {
+.main-nav-header .nav-hamburger {
   background: #98A4AF;
   cursor: pointer;
+  position: fixed;
+  top: 10px;
+  right: 67px;
 }
-.headerWrapper .main-nav-header .nav-dropdown {
-  display: none;
+.main-nav-header .nav-dropdown {
+  display: flex;
   flex-direction: column;
   align-items: center;
+  justify-content: center;
   background: #98A4AF;
   position: fixed;
   width: 100vw;
-  height: 100vh;
+  height: 0vh;
   z-index: 2;
   left: 0;
-  top: 48px;
-}
-.headerWrapper .main-nav-header .nav-dropdown .navContainer {
-  display: flex;
-  flex-direction: column;
-  margin-top: 100px;
-}
-.headerWrapper .main-nav-header .nav-dropdown .navContainer .nav-dropDown-item {
+  top: 0;
   font-size: 5rem;
   font-family: Roboto, Arial, sans-serif;
-  color: white;
   font-weight: bold;
   margin-top: 35px;
   z-index: 3;
+  overflow: hidden;
 }
-.headerWrapper .main-nav-header .nav-dropdown .navContainer .nav-dropDown-item:hover {
+.main-nav-header .nav-dropdown a {
+  text-decoration: none;
+  color: white;
+  position: relative;
+  padding: 20px;
+  height: 50vh;
+}
+.main-nav-header .nav-dropdown a:hover {
   color: black;
 }
-.headerWrapper .main-nav-header .nav-dropdown .navContainer a {
-  text-decoration: none;
+.main-nav-header .nav-hidden {
+  visibility: visible;
 }
-.headerWrapper .main-nav-header .nav-hidden {
-  display: flex;
-}
-.headerWrapper .main-nav-header .nav-hamburger-hidden {
+.main-nav-header .nav-hamburger-hidden {
   display: none;
 }
-.headerWrapper .main-nav-header .nav-hamburger-visible {
+.main-nav-header .nav-hamburger-visible {
   display: flex;
 }
-.headerWrapper .main-nav-header .nav-hamburger-X {
+.main-nav-header .nav-hamburger-X {
   display: none;
 }
-.headerWrapper .main-nav-header .nav-hamburger-X-visible {
+.main-nav-header .nav-hamburger-X-visible {
   display: flex;
   cursor: pointer;
+  position: fixed;
+  top: 10px;
+  right: 67px;
 }
 .home .jumbotron {
   max-width: 1024px;
